--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/controllers/index.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/controllers/index.mustache
@@ -3,23 +3,11 @@
 {{#operations}}
 {{#operation}}
 {{#-first}}
-const {{classname}}Controller = require('./{{classname}}Controller');
+export * from '#controllers/{{#fnDashize}}{{classname}}{{/fnDashize}}';
 {{/-first}}
 {{/operation}}
 {{/operations}}
 {{/apis}}
 {{/apiInfo}}
 
-module.exports = {
-{{#apiInfo}}
-{{#apis}}
-{{#operations}}
-{{#operation}}
-  {{#-first}}
-  {{classname}}Controller,
-  {{/-first}}
-{{/operation}}
-{{/operations}}
-{{/apis}}
-{{/apiInfo}}
-};
+
