--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/logger.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/logger.mustache
@@ -1,21 +1,31 @@
-const { transports, createLogger, format } = require('winston');
+import { transports, createLogger, format } from 'winston';
+import config from '#root/config';
+
+/*
+const enumerateErrorFormat = format((info) => {
+    if (info instanceof Error) {
+        Object.assign(info, { message: info.stack });
+    }
+    return info;
+});
+*/
 
 const logger = createLogger({
-  level: 'info',
-  format: format.combine(
-    format.timestamp(),
-    format.json(),
-  ),
-  defaultMeta: { service: 'user-service' },
-  transports: [
-    new transports.Console(),
-    new transports.File({ filename: 'error.log', level: 'error', timestamp: true }),
-    new transports.File({ filename: 'combined.log', timestamp: true }),
-  ],
+    level: config.NODE_ENV === 'dev' ? 'debug' : 'info',
+    format: format.combine(
+        //enumerateErrorFormat(),
+        //config.NODE_ENV === 'development' ? format.colorize(): winston.format.uncolorize(),
+        //format.splat(),
+        format.timestamp(),
+        //format.prettyPrint()
+        format.json()
+    ),
+    //defaultMeta: { service: 'user-service' },
+    transports: [
+        new transports.Console(),
+        new transports.File({ filename: 'error.log', level: 'error' }),
+        new transports.File({ filename: 'combined.log' })
+    ]
 });
 
-if (process.env.NODE_ENV !== 'production') {
-  logger.add(new transports.Console({ format: format.simple() }));
-}
-
-module.exports = logger;
+export default logger;
