--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/services/index.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/services/index.mustache
@@ -1,25 +1,7 @@
-{{#apiInfo}}
-{{#apis}}
-{{#operations}}
-{{#operation}}
-{{#-first}}
-const {{classname}}Service = require('./{{classname}}Service');
-{{/-first}}
-{{/operation}}
-{{/operations}}
-{{/apis}}
-{{/apiInfo}}
-
-module.exports = {
-{{#apiInfo}}
-{{#apis}}
-{{#operations}}
-{{#operation}}
-{{#-first}}
-  {{classname}}Service,
-{{/-first}}
-{{/operation}}
-{{/operations}}
-{{/apis}}
-{{/apiInfo}}
-};
+export * from '#services/activity/apis';
+export * from '#services/campaign/apis';
+export * from '#services/company/apis';
+export * from '#services/media/apis';
+export * from '#services/meta/apis';
+export * from '#services/user/apis';
+export { ServiceResponse, SuccessResponse } from '#services/service';
