Remove all references to poocho.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/config.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/config.mustache
@@ -5,7 +5,7 @@ import joi from 'joi';
 dotenv.config();
 
 const DEFAULT_ROOT_DIR = process.cwd(); //This is the root directory where index.ts is present
-const DEFAULT_URL_PATH = 'https://api.poocho.co';
+const DEFAULT_URL_PATH = 'https://api.yourdomain.co';
 const DEFAULT_URL_PORT: number = 3000;
 const DEFAULT_BASE_VER = '/v1';
 const DEFAULT_PROJ_DIR = DEFAULT_ROOT_DIR;
