--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/package.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/package.mustache
@@ -1,7 +1,7 @@
 {
-  "name": "your-backend-api",
-  "version": "1.0.0",
-  "description": "Backed APIs to support Frontend",
+  "name": "{{projectName}}",
+  "version": "{{appVersion}}",
+  "description": "{{{appDescription}}}",
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
