Added: Model Docs and Enum Refs support
Model Docs:
 It generates the docs/model.puml (plantUML) documentation for model's
 that have x-mongo-model and x-mongo-schema vendor extensions.

Enum Refs:
 It now supports adding Enum Refs like so in the openapi
 components/schemas section.

   >> Gender:
   >>   type: string
   >>   enum: ['male', 'female', 'non-binary', 'rather_not_say',
   'other']

 This allows the enum to be reused across models in the open api schema.

 The mustache files now generate models/enums.ts file which captures the
 enum type definition for all such enum refs.

 These enum refs are imported only by the model files (models/*.ts) that
 use them.

 Caveats:
 1. Since all the enum refs are defined in a single enum.ts file, their
 names must be unique across all the enum refs.
 2. enum values must be in snake case and should only
    contain alphabets. All the enum values are capitalized in code, so
    pascalCase or camelCase will be unreadable. Having numbers or spaces
    in the value will result in eslint, compiletime or runtime errors.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/config.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/config.mustache
@@ -22,6 +22,7 @@ const envVarsSchema = joi
         BASE_VERSION: joi.string().default(DEFAULT_BASE_VER),
         CONTROLLER_DIRECTORY: joi.string().default(path.join(DEFAULT_PROJ_DIR, 'controllers')),
         OPENAPI_YAML: joi.string().default(path.join(DEFAULT_ROOT_DIR, 'api', 'openapi.yaml')),
+        MODEL_PNG: joi.string().default(path.join(DEFAULT_ROOT_DIR, 'docs', 'model.png')),
         FULL_PATH: joi
             .string()
             .default(`${DEFAULT_URL_PATH}:${DEFAULT_URL_PORT}/${DEFAULT_BASE_VER}`),
@@ -46,6 +47,7 @@ export default {
     BASE_VERSION: envVars.BASE_VERSION,
     CONTROLLER_DIRECTORY: envVars.CONTROLLER_DIRECTORY,
     OPENAPI_YAML: envVars.OPENAPI_YAML,
+    MODEL_PNG: envVars.MODEL_PNG,
     FULL_PATH: envVars.FULL_PATH,
     FILE_UPLOAD_PATH: envVars.FILE_UPLOAD_PATH
 };
