--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/models/plugins/paginate.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/models/plugins/paginate.mustache
@@ -7,15 +7,18 @@ const paginate = (schema: any) => {
 
         if (options.sortBy) {
             sort = options.sortBy.split(',').join(' ');
+            sort = sort + ' ' + '_id';
         } else {
-            sort = 'createdAt';
+            sort = '_id';
         }
 
-        const limit =
-            options.limit && parseInt(options.limit, 10) > 0 ? parseInt(options.limit, 10) : 10;
+        const perPage =
+            options.perPage && parseInt(options.perPage, 10) > 0
+                ? parseInt(options.perPage, 10)
+                : 10;
         const page =
             options.page && parseInt(options.page, 10) > 0 ? parseInt(options.page, 10) : 1;
-        const skip = (page - 1) * limit;
+        const skip = (page - 1) * perPage;
 
         let filter: any = {};
         //First copy the user provided filters (API filters)
@@ -28,7 +31,7 @@ const paginate = (schema: any) => {
         }
 
         const countPromise = this.countDocuments(filter).exec();
-        let docPromise = this.find(filter).sort(sort).skip(skip).limit(limit);
+        let docPromise = this.find(filter).sort(sort).skip(skip).limit(perPage);
 
         if (options.populate) {
             options.populate.split(',').forEach((populateOption: any) => {
@@ -49,13 +52,16 @@ const paginate = (schema: any) => {
 
         return Promise.all([countPromise, docPromise]).then((values) => {
             const [totalResults, results] = values;
-            const totalPages = Math.ceil(totalResults / limit);
+            const totalPages = Math.ceil(totalResults / perPage);
+            const pagination = {
+                currentPage: page,
+                pageCount: totalPages,
+                perPage: perPage,
+                totalCount: totalResults
+            };
             const result = {
                 results,
-                page,
-                limit,
-                totalPages,
-                totalResults
+                pagination
             };
             return Promise.resolve(result);
         });
