--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/service.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/service.mustache
@@ -29,12 +29,7 @@ const {{{operationId}}} = ({{#allParams}}{{#-first}}{ {{/-first}}{{^isBodyParam}
     try {
       resolve(Service.successResponse({}, 200));
     } catch (err) {
-      let apiErr: APIError = WrapError(
-            'Internal server error',
-            httpStatus.INTERNAL_SERVER_ERROR,
-            <Error>err
-      );
-      reject(apiErr);
+      reject(WrapError(<Error>err));
     }
   });
 {{/operation}}
