Delete unused import

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/api-error.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/api-error.mustache
@@ -1,4 +1,4 @@
-import httpStatus, { HttpStatus } from 'http-status';
+import httpStatus from 'http-status';
 
 //FIXME: Use the in-built recursive error wrapping support provided by ES2022 through options parameter.
 // Unable to use that yet since waiting for this fix in typescript: https://github.com/vector-im/element-web/issues/24913
