--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/controller.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/controller.mustache
@@ -8,11 +8,10 @@
  * parameters are extracted and sent to the service, and where response is handled.
  */
 
-import Controller from '#controllers/controller';
-import * as service from '#services';
+import Controller from '#apiserver/controllers/controller';
+import * as service from '#apiservices';
 import { OpenApiRequest } from 'express-openapi-validator/dist/framework/types';
 import { Response } from 'express';
-import logger from '#drivers/logger';
 
 {{#operations}}
 {{#operation}}
