Change references to apiserver.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/controllers/index.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/controllers/index.mustache
@@ -3,7 +3,7 @@
 {{#operations}}
 {{#operation}}
 {{#-first}}
-export * from '#controllers/{{#fnDashize}}{{classname}}{{/fnDashize}}';
+export * from '#apiserver/controllers/{{#fnDashize}}{{classname}}{{/fnDashize}}';
 {{/-first}}
 {{/operation}}
 {{/operations}}
