Bugfix: Fix issues with Enum refs
Some enumerations are declared as a model and are simply referenced by
other models in the code.
The code generation for enum refs was broken. This is now fixed.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/enums.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/enums.mustache
@@ -1,9 +1,9 @@
 {{>license}}
 {{#models}}
 {{#model}}
-{{#vars}}{{#isEnumRef}}{{^isEnum}}export enum {{#lambda.pascalcase}}{{name}}{{/lambda.pascalcase}} {
+{{#isEnum}} export enum {{#lambda.pascalcase}}{{name}}{{/lambda.pascalcase}} {
 {{#allowableValues}}{{#values}}{{#lambda.uppercase}}{{.}}{{/lambda.uppercase}} = '{{.}}'{{^-last}},{{/-last}}{{/values}}{{/allowableValues}}
-};{{/isEnum}}{{/isEnumRef}}{{/vars}}
+};{{/isEnum}}
 {{/model}}
 {{/models}}
 
