Change folder references.
1. Change imports to refer to apiserver.
2. Remove the const definition of the openapi yaml file path.

--- a/modules/openapi-generator/src/main/resources/nodejs-express-server/index.mustache
+++ b/modules/openapi-generator/src/main/resources/nodejs-express-server/index.mustache
@@ -1,8 +1,8 @@
 import mongoose from 'mongoose';
-import config from '#root/config';
+import config from '#config';
 import logger from '#drivers/logger';
 
-import Server from '#root/server';
+import Server from '#apiserver/server';
 
 let server: Server;
 
@@ -47,7 +47,7 @@ process.on('SIGTERM', () => {
 });
 
 const launchServer = async () => {
-    server = new Server(config.URL_PORT, config.OPENAPI_YAML);
+    server = new Server(config.URL_PORT, './apiserver/api/openapi.yaml');
     server.launch();
     logger.info('Express server running');
 };
